--- a/resources/[FAROESTE]/[SYSTEM]/frp_identity/html/ui.html
+++ b/resources/[FAROESTE]/[SYSTEM]/frp_identity/html/ui.html
@@ -8,8 +8,6 @@
 		title="roboto">
 	<script src="nui://game/ui/jquery.js" type="text/javascript"></script>	
 
-	<script type="text/javascript" src="../config/locale_ui.js"></script>
-
 	<script src="https://kit.fontawesome.com/eb73bbb7e4.js" crossorigin="anonymous"></script>
 </head>
 
@@ -28,6 +26,7 @@
 		</div>
 	</div>
 	
+	<script  src="../config/locale_ui.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>	
 </body>
 
