feat(frp_shop_buy): basicamente reescrito, agora a loja de venda faz parte desse script também.

--- a/resources/[FAROESTE]/[SHOPS]/frp_shop_buy/nui/index.html
+++ b/resources/[FAROESTE]/[SHOPS]/frp_shop_buy/nui/index.html
@@ -55,8 +55,8 @@
                     <div class="divider"></div>
                     <div class="info">
                         <span><img src="nui://frp_inventory/nui/images/peso.png"><span id="weight">0.0KG</span></span>
-                        <span onclick="buy(false)"><img id="p_dollar_img" src="nui://frp_inventory/nui/images/money.png"><span id="p_dollar">0.00</span></span>
-                        <span onclick="buy(true)"><img id="p_gold_img" src="nui://frp_inventory/nui/images/gold.png"><span id="p_gold">0.00</span></span>
+                        <span><img id="p_dollar_img" src="nui://frp_inventory/nui/images/money.png"><span id="p_dollar">0.00</span></span>
+                        <span><img id="p_gold_img" src="nui://frp_inventory/nui/images/gold.png"><span id="p_gold">0.00</span></span>
                     </div>          
                     <div class="divider"></div>
                 </div>
