--- a/resources/[FAROESTE]/[SYSTEM]/frp_identity/html/ui.html
+++ b/resources/[FAROESTE]/[SYSTEM]/frp_identity/html/ui.html
@@ -15,7 +15,7 @@
 <body id="body">
 
 	<div class="container">		
-		<div id="loading" class="spinner" style="display: block">
+		<!-- <div id="loading" class="spinner" style="display: block">
 			
 			<div class="svelte-2gtczp">
 				<div class="spinner svelte-2gtczp">
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 			
-		</div>
+		</div> -->
 	</div>
 	
 	<script  src="../config/locale_ui.js" type="text/javascript"></script>
