--- a/resources/[TEST]/saltychat/NUI/SaltyWebSocket.html
+++ b/resources/[TEST]/saltychat/NUI/SaltyWebSocket.html
@@ -5,17 +5,9 @@
 
     <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
 </head>
-<style>
-@font-face {
-	font-family: crock;
-	src: url(crock.ttf) format('truetype')
-}
-</style>
-<body>
-	<div style="font-size:15px; position:absolute;color:#ffff00;top:97%;font-family: 'crock', crock, serif;font-weight: bold;" id="DisplayRange">
-		Range of 8 meters
+<body style="display: none; font-family:Arial; font-size:26px; color:white; outline:thin; outline-color:black; text-shadow: 1px 1px 1px black">
+	<div id="demo">
 	</div>
-	
 	
 	<script>
         let pluginAddress = "127.0.0.1:8088";
@@ -163,23 +155,6 @@
                         window[event.data.Function](event.data.Params);
                     }
                 }
-				if (event.data.Range != null)
-                    {
-							DisplayRange = event.data.Range;
-							var range = document.getElementById("DisplayRange");
-							range.innerHTML = DisplayRange;
-                    }
-					if (event.data.Talking == true)
-                    {
-							var range = document.getElementById("DisplayRange");
-							range.style.color = "#d8181f";
-                    }
-					else if (event.data.Talking == false)
-                    {
-                       var range = document.getElementById("DisplayRange");
-						range.style.color = "#e6e6e6";
-                    }
-					
             }, false);
         });
 	</script>
