--- a/resources/[FAROESTE]/[SYSTEM]/frp_crafting/nui/index.html
+++ b/resources/[FAROESTE]/[SYSTEM]/frp_crafting/nui/index.html
@@ -63,6 +63,11 @@
         <div class="divider"></div>
         <div class="bottom">
             <span class="header">Receita</span>
+            <div class = 'bottom__item_description'>
+                <span class = 'bottom__item_description__text'>
+                    <!-- Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type -->
+                </span>
+            </div>
             <div class="item-row">
                 <!-- <div class="item">
                     <img src="nui://frp_inventory/nui/images/items/ammo_arrow.png" />
