[frp_clothes]: Corrige label do Gauntlets e Bracelets

--- a/resources/[FAROESTE]/[SYSTEM]/frp_clothes/client/html/index.html
+++ b/resources/[FAROESTE]/[SYSTEM]/frp_clothes/client/html/index.html
@@ -456,7 +456,7 @@
                         <div id="Gauntlets" class="col s12 panel ">
                             <div class="col s12 panel item">
                                 <div class="col s6 panel-col item" >
-                                    <h6 class="grey-text title">Manopla <span class="qtd">0/16</span></h6>                             
+                                    <h6 class="grey-text title">Bracelete <span class="qtd">0/16</span></h6>                             
                                 </div>
                                 <div class="col s6 panel-col">
                                     <button class="button-left col s4 waves-effect waves-light btn">
@@ -473,7 +473,7 @@
                         <div id="Bracelets" class="col s12 panel ">
                             <div class="col s12 panel item">
                                 <div class="col s6 panel-col item" >
-                                    <h6 class="grey-text title">Braceletes <span class="qtd">0/6</span></h6>                             
+                                    <h6 class="grey-text title">Pulseira <span class="qtd">0/6</span></h6>                             
                                 </div>
                                 <div class="col s6 panel-col">
                                     <button class="button-left col s4 waves-effect waves-light btn">
