Modificações Fumi/Patifico

--- a/resources/[FAROESTE]/[SYSTEM]/frp_hud/nui/ui.html
+++ b/resources/[FAROESTE]/[SYSTEM]/frp_hud/nui/ui.html
@@ -13,8 +13,8 @@
 	<body id="body">
 		<div id="money2"></div>
 		<div class="info server server2" style="display:block;">
-			<div id="server"><img src="assets/logo.png"></div>
-			<div id="server2"><img src="assets/logo.png"></div>
+			<div id="server"><img src="assets/logogif.gif"></div>
+			<div id="server2"><img src="assets/logogif.gif"></div>
 		</div>
 		<div id="starter"></div>
 		<div id="container">
